Update to creating page for Zoomo, etc

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -146,20 +146,20 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a> via the <a href="http://jcupitt.github.io/libvips/API/current/Making-image-pyramids.md.html">dzsave</a> feature</td>
     </tr>
     <tr>
-        <td><a href="http://zoomable.ca/">Zoomable</a></td>
-        <td>service, offers embeds; <a href="http://zoomable.ca/api.html">API available</a></td>
+        <td><a href="https://zoomable.ca/">Zoomable</a></td>
+        <td>service, offers embeds; <a href="https://zoomable.ca/api.html">API available</a></td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
+    </tr>    
     <tr>
         <td><a href="https://github.com/zoomhub/zoomhub">ZoomHub</a></td>
         <td>service, under construction</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
-        <td><a href="http://zoomo.ca/">Zoomo</a></td>
+        <td><a href="https://zoomo.ca/">Zoomo</a></td>
         <td>service (Image Sharing Website), offers embeds</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>    
+    </tr>        
     <tr>
         <td colspan="3"><h4>IIIF</h4></td>
     </tr>
