In the wild and creating updates

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -178,7 +178,7 @@
         <td>
             C++ library to encode or decode JPEG 2000 images
             <br><br>
-            example of a batch convert script: <a href="https://github.com/DDMAL/diva.js/blob/master/source/processing/process_jp2.py">process_jp2.py</a> (Diva.js project)
+            example of a batch convert script: <a href="https://github.com/DDMAL/diva.js/blob/master/legacy/process.py">process.py</a> (Diva.js project)
         </td>
         <td>
             <a href="/examples/tilesource-iiif/">IIIF</a><br/>(requires a IIIF-compliant image server with JPEG 2000 support, like <a href="https://github.com/pulibrary/loris">Loris</a>; see also <a href="http://iiif.io">iiif.io</a> for more details)
