--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -74,6 +74,7 @@
 </div>
 <h4><a name="art"></a>Art/Photography</h4>
 <ul class="square-list">
+    <li><a href="http://alanborger.com/waterwar/supplyanddemand">Alan Borger</a></li>
     <li><a href="http://alexbartl.de/panorama.html">Alexander Bartl: Panoramas</a></li>
     <li>
         <a href="https://www.artsy.net/">Artsy</a>
@@ -81,6 +82,7 @@
             <li>e.g. <a href="https://www.artsy.net/artwork/saint-clair-cemin-greece/zoom">Greece, Saint Clair Cemin, 2012</a></li>
         </ul>
     </li>
+    <li><a href="http://refreshphoto.ru/danlug/konzerthaus-berlin/">Berlin's Konzerthaus at RefreshPhoto.ru</a></li>
     <li>
         <a href="http://pinacotecabrera.org/">Brera Pinacoteca</a>
         <ul>
@@ -126,6 +128,7 @@
             <li>e.g. <a href="https://www.theleidencollection.com/leiden-viewer/david-and-uriah/">David and Uriah, Pieter Lastman (Dutch, 1583 – 1633)</a></li>
         </ul>
     </li>
+    <li><a href="http://nanojewellery.com/zoom-in/">NanoJewellery</a></li>
     <li>
         <a href="http://samling.nasjonalmuseet.no/en/">Nasjonalmuseet, Norway</a>
         <ul>
@@ -183,6 +186,12 @@
         <a href="http://beta.biblissima.fr/en">Biblissima portal (medieval manuscripts and early printed books)</a>
         <ul>
             <li>e.g. an illumination from a manuscript <a href="http://beta.biblissima.fr/en/ark:/43093/ifdata68b8958d6efb2c5b0d9e670d185dcd38a01b1f57">Égypte: Alexandrie (Paris, BnF, Latin 4802 f.136)</a></li>
+        </ul>
+    </li>
+    <li>
+        <a href="https://benihassan.com/">Beni Hassan @ Macquarie University</a>
+        <ul>
+            <li>e.g. <a href="https://benihassan.com/dictionary/Kanawati-Evans-BH1-Pl-07a-Beni-Hassan-Khnumhotep-II-Tomb-3-Chapel-Inscription-East-wall-Lower-section-Wall/">(auto)Biography of Khnumhotep II</a></li>
         </ul>
     </li>
     <li>
@@ -299,6 +308,7 @@
 </ul>
 <h4><a name="mapping"></a>Mapping</h4>
 <ul class="square-list">
+    <li><a href="http://embers.nicejacket.cc/known-eilarun.html">The Embers of Eilar&ucirc;n</a></li>
     <li><a href="https://lib.msu.edu/branches/map/scannedmaps/intro/">Michigan State University Map Library</a>
         <ul>
             <li>e.g. <a href="https://lib.msu.edu/branches/map/MiJPEGS/1822-michigan/">Michigan Territory, 1822</a></li>
@@ -380,6 +390,8 @@
             <li>e.g. <a href="http://epaper.e-dicola.net/en/magazines/1676-media-key-367#page=1">Media Key Magazine, No. 367</a></li>
         </ul>
     </li>
+
+    <li><a href="http://ignaciobello.com.ar/infografia_21_personajes_que_mas_progresaron.html">Ignacio Bello's "21 Personajes Que M&aacute;s Progresaron"</a></li>
     <li><a href="http://www.monticello.org/mulberry-row/places/phase-i">Landscape of Slavery: Mulberry Row at Monticello</a></li>
     <li><a href="https://mapofmetal.com/">Map of Metal</a></li>
     <li><a href="http://beehivecollective.org/posterViewer/?poster=mr">Mesoam&eacute;rica Resiste, Beehive Design Collective</a></li>
