--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             <li><a href="https://github.com/usnistgov/OpenSeadragonFiltering">OpenSeadragonFiltering</a> allows you to add image filters in OpenSeadragon.</li>
             <li><a href="https://github.com/thejohnhoffer/viaWebGL">OpenSeadragonGL</a> allows you to run WebGL shaders on all tiles in OpenSeadragon.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonGuides">OpenSeadragonGuides</a> allows you to add horizontal and vertical guidelines to the Openseadragon viewer.</li>
+            <li><a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">OpenSeadragonHTMLelements</a> allows you to add HTML elements that pan, zoom, rotate and flip with the Openseadragon viewer.</li>
             <li><a href="https://github.com/msalsbery/OpenSeadragonImagingHelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
             <li><a href="https://github.com/Pin0/openseadragon-justified-collection">OpenSeadragonJustifiedCollection</a> Openseadragon plugin for arranging collections in a justified grid layout.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonMagnifier">OpenSeadragonMagnifier</a> allows you to view part of the image magnified in a navigator-like box.</li>
