Canvas HD Plugin

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
             <li><a href="https://github.com/openseadragon/bookmark-url">Bookmark URL</a> updates the page URL with the current zoom/pan.</li>
             <li><a href="https://github.com/Emigre/openseadragon-annotations">OpenSeadragonAnnotations</a> allows you to draw in a SVG overlay that scales with the image. Useful to annotate and highlight regions of an image.</li>
             <li><a href="https://github.com/altert/OpenSeadragonCanvasOverlay">OpenSeadragonCanvasOverlay</a> allows you to add canvas overlay that pans and zooms with OpenSeadragon viewer.</li>
+            <li><a href="https://github.com/joshua-gould/OpenSeadragonCanvasOverlayHd">OpenSeadragonCanvasOverlayHd</a> OpenSeadragonCanvasOverlayHd</a> allows you to add a canvas overlay that renders nicely on retina displays, pans and zooms with OpenSeadragon viewer, and supports multi-images.</li>
             <li><a href="https://github.com/harshalitalele/OpenSeadragonDraggableNavigator/">OpenSeadragonDraggableNavigator</a> allows you to make navigator draggable over the OpenSeadragon viewer.</li>
             <li><a href="https://github.com/altert/OpenseadragonFabricjsOverlay">OpenSeadragonFabricjsOverlay</a> allows you to add Fabric.js canvas overlay that pans and zooms with OpenSeadragon viewer.</li>
             <li><a href="https://github.com/usnistgov/OpenSeadragonFiltering">OpenSeadragonFiltering</a> allows you to add image filters in OpenSeadragon.</li>
@@ -233,7 +234,6 @@
             <li><a href="https://github.com/msalsbery/OpenSeadragonViewerInputHook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonZoomLevels">OpenSeadragonZoomLevels</a> allows restricting the image zoom to specific levels.</li>
             <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
-
         </ul>
     </li>
     <li>
