New "In the Wild"

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -128,6 +128,7 @@
             <li>e.g. <a href="https://www.theleidencollection.com/leiden-viewer/david-and-uriah/">David and Uriah, Pieter Lastman (Dutch, 1583 – 1633)</a></li>
         </ul>
     </li>
+    <li><a href="https://majesty-of-36-views.glitch.me/">The Majesty of <em>The Thirty-Six Views of Mt. Fuji</em></a></li>
     <li><a href="http://nanojewellery.com/zoom-in/">NanoJewellery</a></li>
     <li>
         <a href="http://samling.nasjonalmuseet.no/en/">Nasjonalmuseet, Norway</a>
