--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -403,7 +403,7 @@
 <ul class="square-list">
   <li><a href="http://200k.accaglobal.com/wall">ACCA's "Wall of Members"</a></li>
   <li><a href="https://clarksullivan.com/cams/ritz">Clark/Sullivan Construction</a></li>
-  <li><a href="http://www.sitecenters.com/">Site Centers Corp.</a>
+  <li><a href="http://www.sitecenters.com/">SITE Centers Corp.</a>
     <ul>
       <li>e.g. <a href="https://www.sitecenters.com/properties/leaseplan/winter-garden-village">Winter Garden Village</a></li>
     </ul>
