--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -408,6 +408,11 @@
       <li>e.g. <a href="https://www.sitecenters.com/properties/leaseplan/winter-garden-village">Winter Garden Village</a></li>
     </ul>
   </li>
+  <li><a href="https://www.truedesign.it/en/lifespaces">True Design Life Spaces</a>
+    <ul>
+      <li>e.g. <a href="https://www.truedesign.it/en/lifespaces/working_space-13.html">Working Spaces</a></li>
+    </ul>
+  </li>
 </ul>
 
 <h4><a name="tools"></a>Tools</h4>
