In the wild and creating zooming

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -185,6 +185,15 @@
         </td>
     </tr>
     <tr>
+        <td><a href="https://micr.io/">Micrio</a></td>
+        <td>
+            Service (cloud-based tiling &amp; hosting), offers embeds
+        </td>
+        <td>
+            <a href="https://micr.io/iiif/image-api">IIIF</a>
+        </td>
+    </tr>
+    <tr>
         <td colspan="3"><h4>TMS</h4></td>
     </tr>
     <tr>
