Art Institute of Chicago added to In the Wild

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -76,6 +76,12 @@
 <ul class="square-list">
     <li><a href="http://alexbartl.de/panorama.html">Alexander Bartl: Panoramas</a></li>
     <li>
+        <a href="https://www.artic.edu/">Art Institute of Chicago</a>
+        <ul>
+            <li>e.g. <a href="https://www.artic.edu/artworks/61428/cow-s-skull-with-calico-roses">Cow's Skull with Calico Roses, Georgia O'Keeffe, 1931 </a></li>
+        </ul>
+    </li>
+    <li>
         <a href="https://www.artsy.net/">Artsy</a>
         <ul>
             <li>e.g. <a href="https://www.artsy.net/artwork/saint-clair-cemin-greece/zoom">Greece, Saint Clair Cemin, 2012</a></li>
