--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -141,15 +141,15 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
-        <td><a href="https://jcupitt.github.io/libvips/">VIPS</a></td>
+        <td><a href="https://libvips.github.io/libvips/">VIPS</a></td>
         <td>command line tool and library for a number of languages</td>
-        <td><a href="/examples/tilesource-dzi/">DZI</a> via the <a href="http://jcupitt.github.io/libvips/API/current/Making-image-pyramids.md.html">dzsave</a> feature</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a> via the <a href="https://libvips.github.io/libvips/API/current/Making-image-pyramids.md.html">dzsave</a> feature</td>
     </tr>
     <tr>
         <td><a href="https://zoomable.ca/">Zoomable</a></td>
         <td>service, offers embeds; <a href="https://zoomable.ca/api.html">API available</a></td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>    
+    </tr>
     <tr>
         <td><a href="https://github.com/zoomhub/zoomhub">ZoomHub</a></td>
         <td>service, under construction</td>
@@ -159,7 +159,7 @@
         <td><a href="https://zoomo.ca/">Zoomo</a></td>
         <td>service (Image Sharing Website), offers embeds</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>        
+    </tr>
     <tr>
         <td colspan="3"><h4>IIIF</h4></td>
     </tr>
