--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -346,6 +346,12 @@
         </ul>
     </li>
     <li>
+        <a href="https://greatbasinforensics.com/">Great Basin Forensics :: Remote Forensic Imaging</a>
+        <ul>
+            <li><a href="https://free.greatbasinforensics.com/Submission/View/5">Demo: CDN $10 with different light sources @ 2000 DPI</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="http://www.proteinatlas.org/">The Human Protein Atlas</a>
         <ul>
             <li>e.g. <a href="http://www.proteinatlas.org/ENSG00000213463-SYNJ2BP/tissue/mouse+brain">Mouse brain tissue</a></li>
