fix(example): use correct sharp library link

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -136,7 +136,7 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
-        <td><a href="http://sharp.dimens.io/">Sharp</a></td>
+        <td><a href="https://sharp.pixelplumbing.com/">Sharp</a></td>
         <td>Node.js, uses VIPS</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
