--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -147,17 +147,12 @@
     </tr>
     <tr>
         <td><a href="https://zoomable.ca/">Zoomable</a></td>
-        <td>service, offers embeds; <a href="https://zoomable.ca/api.html">API available</a></td>
+        <td>service (<a href="https://srv2.zoomable.ca/upload_new.php">free</a> and <a href="https://community.zoomable.ca/">premium</a>), offers embeds; <a href="https://zoomable.ca/api.html">API available</a>; Image and Viewer generators for <a href="https://zoomable.ca/zoomable_for_wordpress.html">Wordpress</a>, <a href="https://zoomable.ca/create_from_photoshop.html">Photoshop</a> and <a href="https://zoomable.ca/create_from_desktop.html">Image Composite Editor</a> are available.</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
         <td><a href="https://github.com/zoomhub/zoomhub">ZoomHub</a></td>
         <td>service, under construction</td>
-        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
-    <tr>
-        <td><a href="https://zoomo.ca/">Zoomo</a></td>
-        <td>service (Image Sharing Website), offers embeds</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
