--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.1/openseadragon-bin-2.4.1.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.1/openseadragon-bin-2.4.1.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                2.4.1
+                2.4.2
             </span>
             <span class="tagline">
             </span>
@@ -169,6 +169,9 @@
             <li><a href='/examples/ui-customize-tooltips/'>
                 <span>Customize Tooltips (I18n)</span>
             </a></li>
+            <li><a href='/examples/ui-tiledimage-polygon-cropping/'>
+                <span>Crop TiledImage with Polygons</span>
+            </a></li>
          </ul>
     </li>
 
@@ -269,13 +272,13 @@
 <a name="installing"></a>
 <h2 id='download'>Download &amp; Install</h2>
 <p>
-  You can get OpenSeadragon 2.4.1 through any of these venues:
+  You can get OpenSeadragon 2.4.2 through any of these venues:
 </p>
 <ul class="square-list">
   <li>
     <strong>Download:</strong>
-    <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.1/openseadragon-bin-2.4.1.zip">zip</a> or
-    <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.1/openseadragon-bin-2.4.1.tar.gz">tar.gz</a>
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.zip">zip</a> or
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.tar.gz">tar.gz</a>
   </li>
   <li>
     <strong>Bower:</strong> <tt>bower install openseadragon</tt>
@@ -287,7 +290,7 @@
     <strong>jsDelivr (CDN):</strong> <a href="https://cdn.jsdelivr.net/npm/openseadragon@2.4/build/openseadragon/openseadragon.min.js">code</a> and <a href="https://cdn.jsdelivr.net/npm/openseadragon@2.4/build/openseadragon/images/">images</a>
   </li>
   <li>
-    <strong>CDNJS (CDN):</strong> <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.1/openseadragon.min.js">code</a> and <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.1/images/">images</a> (<a href="https://cdnjs.com/libraries/openseadragon">info</a>)
+    <strong>CDNJS (CDN):</strong> <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/openseadragon.min.js">code</a> and <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/images/">images</a> (<a href="https://cdnjs.com/libraries/openseadragon">info</a>)
   </li>
 </ul>
 <p>
