--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -333,6 +333,12 @@
     <li><a href="https://www.doc.ic.ac.uk/~dmcginn/adjmat.html">Bitcoin Blockchain Explorer</a></li>
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
     <li>
+      <a href="https://github.com/dmattek/dzPlateViewer">dzPlateViewer for microscopy images</a>
+      <ul>
+        <li>e.g. <a href="http://macdobry.net/deepzoomdemo/demoscreen/XXXXX/YYYYY/index.html">images from a drug screen of anti-cancer compounds</a></li>
+      </ul>
+    </li>
+    <li>
         <a href="http://feistyphoton.org/">Feisty Photon - Astrophotography by Darryn Lavery</a>
         <ul>
             <li>e.g. <a href="http://feistyphoton.org/project/carinatour/">A Tour Around the Carina Nebula</a></li>
