--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
     <li>
         <h3>Code Plugins</h3>
         <ul class="square-list">
-            <li><a href="https://github.com/openseadragon/bookmark-url">Bookmark URL</a> updates the page URL with the current zoom/pan.</li>
             <li><a href="https://github.com/Emigre/openseadragon-annotations">OpenSeadragonAnnotations</a> allows you to draw in a SVG overlay that scales with the image. Useful to annotate and highlight regions of an image.</li>
             <li><a href="https://github.com/recogito/annotorious-openseadragon">OpenSeadragonAnnotorious</a> enables creation and display of annotations in W3C Web Annotation format.</li>
+            <li><a href="https://github.com/openseadragon/bookmark-url">Bookmark URL</a> updates the page URL with the current zoom/pan.</li>
             <li><a href="https://github.com/altert/OpenSeadragonCanvasOverlay">OpenSeadragonCanvasOverlay</a> allows you to add canvas overlay that pans and zooms with OpenSeadragon viewer.</li>
             <li><a href="https://github.com/joshua-gould/OpenSeadragonCanvasOverlayHd">OpenSeadragonCanvasOverlayHd</a> OpenSeadragonCanvasOverlayHd</a> allows you to add a canvas overlay that renders nicely on retina displays, pans and zooms with OpenSeadragon viewer, and supports multi-images.</li>
             <li><a href="https://github.com/harshalitalele/OpenSeadragonDraggableNavigator/">OpenSeadragonDraggableNavigator</a> allows you to make navigator draggable over the OpenSeadragon viewer.</li>
@@ -226,6 +226,7 @@
             <li><a href="https://github.com/thejohnhoffer/viaWebGL">OpenSeadragonGL</a> allows you to run WebGL shaders on all tiles in OpenSeadragon.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonGuides">OpenSeadragonGuides</a> allows you to add horizontal and vertical guidelines to the Openseadragon viewer.</li>
             <li><a href="https://github.com/antonioxdias/OpenSeadragonHTMLelements">OpenSeadragonHTMLelements</a> allows you to add HTML elements that pan, zoom, rotate and flip with the Openseadragon viewer.</li>
+            <li><a href="https://github.com/openseadragon/html-overlay">HTML Overlay</a> is another approach to HTML overlays, creating a zooming space where all of the HTML content inside scales to match the viewer.</li>
             <li><a href="https://github.com/picturae/openSeadragonIiifEyes">openSeadragonIiifEyes</a> retrieves RGB values for the original coordinates from tiles in a openseadragon/iiif environment.</li>
             <li><a href="https://github.com/openseadragon-imaging/openseadragon-imaginghelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
             <li><a href="https://github.com/Pin0/openseadragon-justified-collection">OpenSeadragonJustifiedCollection</a> Openseadragon plugin for arranging collections in a justified grid layout.</li>
@@ -237,9 +238,9 @@
             <li><a href="https://github.com/KTGLeiden/Openseadragon-screenshot">OpenSeadragonScreenshot</a> allows you to make a screenshot of your viewport, with optional magnification.</li>
             <li><a href="https://github.com/picturae/openseadragonselection">OpenSeadragonSelection</a> provides functionality for selecting a rectangular part of an image. Useful for cropping.</li>
             <li><a href="https://github.com/Deprecator16/OpenSeadragonSmartScrollZoom">OpenSeadragonSmartScrollZoom</a> detects how fast the user is scrolling the mouse wheel and increases the zoom speed accordingly.</li>
+            <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
             <li><a href="https://github.com/openseadragon-imaging/openseadragon-viewerinputhook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonZoomLevels">OpenSeadragonZoomLevels</a> allows restricting the image zoom to specific levels.</li>
-            <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
         </ul>
     </li>
     <li>
