Added info about types.

--- a/index.html
+++ b/index.html
@@ -308,6 +308,21 @@
     available on GitHub</a>.
 </p>
 
+<ul>
+    <li>
+        <h3 id="types">Types support</h3>
+        <p>
+            Type definitions for OpenSeadragon can be installed from <a href="https://www.npmjs.com/package/@types/openseadragon">npm</a>.
+            <p>
+                <pre>npm install @types/openseadragon</pre>
+            </p>
+            <p>
+                Note: these are un-official type definitions that are mantained by the <a href="https://github.com/DefinitelyTyped/DefinitelyTyped">DefinitelyTyped</a> community.
+            </p>
+        </p>
+    </li>
+</ul>
+
 
 <h2 id='api-documentation'>API Documentation</h2>
 <p>Available on our <a href="/docs/">documentation pages</a>.</p>
