fixed a comma in the demo code

--- a/examples/tilesource-image/index.html
+++ b/examples/tilesource-image/index.html
@@ -139,7 +139,7 @@ OpenSeadragon({
     tileSources: {
         type: 'image',
         url:  'http://cors-enabled-server.org/my-image.png',
-        crossOriginPolicy: 'Anonymous'
+        crossOriginPolicy: 'Anonymous',
         ajaxWithCredentials: false
     }
     ...
