New in-the-wild and new plugin

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -333,6 +333,12 @@
     <li><a href="https://www.doc.ic.ac.uk/~dmcginn/adjmat.html">Bitcoin Blockchain Explorer</a></li>
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
     <li>
+        <a href="https://covid19pathology.nih.gov/">COVID Digital Pathology Repository</a>
+        <ul>
+            <li>Instructions: click 'View the DPR', enter an email, login with the pre-filled credentials, navigate thru the folders, and open any image.</li>
+        </ul>
+    </li>
+    <li>
       <a href="https://github.com/dmattek/dzPlateViewer">dzPlateViewer for microscopy images</a>
       <ul>
         <li>e.g. <a href="http://macdobry.net/deepzoomdemo/demoscreen/XXXXX/YYYYY/index.html">images from a drug screen of anti-cancer compounds</a></li>
