--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
             <li><a href="https://github.com/Deprecator16/OpenSeadragonSmartScrollZoom">OpenSeadragonSmartScrollZoom</a> detects how fast the user is scrolling the mouse wheel and increases the zoom speed accordingly.</li>
             <li><a href="https://github.com/openseadragon/svg-overlay">SVG Overlay</a> allows you to add SVG elements that pan and zoom with the OpenSeadragon viewer.</li>
             <li><a href="https://github.com/openseadragon-imaging/openseadragon-viewerinputhook">OpenSeadragonViewerInputHook</a> provides hooks into an OpenSeadragon.Viewer and/or OpenSeadragon.MouseTracker for overriding/extending the default user-input event handling behavior.</li>
+            <li><a href="https://github.com/recogito/openseadragon-wmts">OpenSeadragonWMTS</a> allows displaying geo-referenced maps served via the WMTS protocol.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonZoomLevels">OpenSeadragonZoomLevels</a> allows restricting the image zoom to specific levels.</li>
         </ul>
     </li>
