--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -352,6 +352,15 @@
         </ul>
     </li>
     <li>
+        <a href="https://fitsliberator.bitpointer.co">FITS Liberator v4 - Development by Juan Fajardo & David Zambrano Lizarazo</a>
+        <ul>
+            <li><a href="https://fitsliberator.bitpointer.co/fl4/">Tour FL4</a></li>
+            <li><a href="https://noirlab.edu/public/announcements/ann21013/">NOIRlab announcement</a></li>
+            <li><a href="https://esahubble.org/announcements/ann2104/">ESA/Hubble announcement</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ulrOvUeySDw&list=PLMIQP7eArAtbtiWk_oGV4gbcsbofTfoi9&index=2">FITS Liberator Basics instruction video by Robert Hurt</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="https://gp3.mpg.de/">GenePaint</a>
         <ul>
             <li><a href="https://gp3.mpg.de/viewer/setInfo/MH454">Pax6 expression in mouse embryo</a></li>
