Added new IIIF service

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -164,6 +164,15 @@
         <td><a href="/examples/tilesource-iiif/">IIIF</a></td>
     </tr>
     <tr>
+        <td><a href="https://www.iiifhosting.com/">IIIFHosting</a></td>
+        <td>
+            Service, image hosting
+        </td>
+        <td>
+            <a href="https://iiif.io/api/image/2.0/">IIIF</a>
+        </td>
+    </tr>
+    <tr>
         <td><a href="https://iipimage.sourceforge.io/">IIPImage</a></td>
         <td>Server</td>
         <td><a href="/examples/tilesource-iiif/">IIIF</a></td>
