--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 
 <div class="elevator">
     An open-source, web-based viewer for <strong>high-resolution zoomable images</strong>, implemented in pure JavaScript, for desktop and mobile.
+    <a class="opencollective" href="https://opencollective.com/openseadragon/donate" target="_blank">
+        <img src="https://opencollective.com/openseadragon/donate/button@2x.png?color=blue" width=250 />
+    </a>
 </div>
 
 <div class="demoarea">
