--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 <h2 id='support'>Support</h2>
 <p>GitHub: <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a></p>
 <p>Twitter: <a href="https://twitter.com/openseadragon">@OpenSeadragon</a></p>
-<p>Chat: <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a> (also accessible via <a href="https://irc.gitter.im/">IRC</a>)</p>
+<p>Chat: <a href="https://discord.gg/Ygwap8UrGC">Discord</a> or <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a> (also accessible via <a href="https://irc.gitter.im/">IRC</a>)</p>
 <!-- <p>IRC: #openseadragon on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>)</p> -->
 
 
