"creating" page update

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -151,8 +151,8 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
-        <td><a href="https://github.com/zoomhub/zoomhub">ZoomHub</a></td>
-        <td>service, under construction</td>
+        <td><a href="https://zoomhub.net/">ZoomHub</a></td>
+        <td>service (free for personal use): <a href="https://zoomhub.net/#embed">offers embeds</a> and <a href="https://zoomhub.net/#api">developer API</a></td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
