--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -325,7 +325,7 @@
           <li> e.g. <a href="http://www.skyimd.com/hog-island-tomales-bay-high-resolution-aerial-zoom/">Hog Island, Tomales Bay</a></li>
         </ul>
     </li>
-
+    <li><a href="https://urbanomonte-4db4a.web.app/">Urbano Monte's 1587 World Map</a></li>
 </ul>
 <h4><a name="science"></a>Scientific</h4>
 <ul class="square-list">
