--- a/index.html
+++ b/index.html
@@ -209,6 +209,17 @@
             </a></li>
         </ul>
     </li>
+    <li>
+        <h3>Futher Examples</h3>
+        <p>
+            Refer to this CodePen collection for a variety of examples that might serve as an inspiration for your own projects.
+        </p>
+         <ul>
+            <li><a href='https://codepen.io/collection/APoyjJ/'>
+                <span>OpenSeadragon Recipes</span>
+            </a></li>
+        </ul>
+    </li>
 </ul>
 
 
