--- a/examples/tilesource-zoomify/index.html
+++ b/examples/tilesource-zoomify/index.html
@@ -21,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.0.0/openseadragon-bin-3.0.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.0.0/openseadragon-bin-3.0.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                2.4.2
+                3.0.0
             </span>
             <span class="tagline">
             </span>
@@ -89,10 +89,14 @@
 OpenSeadragon({
     ...
     tileSources: [{
+        //required	
         type:       "zoomifytileservice",
         width:      7026,
         height:     9221,
-        tilesUrl:   "/test/data/zoomify/"
+        tilesUrl:   "/test/data/zoomify/",
+        //optional
+        tileSize: 256,
+        fileFormat: 'jpg'	
     }]
     ...
 });</pre>
