--- a/examples/ui-keyboard-navigation/index.html
+++ b/examples/ui-keyboard-navigation/index.html
@@ -21,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.0.0/openseadragon-bin-3.0.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.4.2/openseadragon-bin-2.4.2.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.0.0/openseadragon-bin-3.0.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                2.4.2
+                3.0.0
             </span>
             <span class="tagline">
             </span>
@@ -93,6 +93,8 @@
     <li><strong>[ r ]</strong> - rotate <strong>clockwise</strong></li>
     <li><strong>[ R ]</strong> - rotate <strong>counterclockwise</strong></li>
     <li><strong>[ f ]</strong> - flip <strong>horizontally</strong></li>
+    <li><strong>[ j ]</strong> - change to <strong>previous</strong> image source (sequence mode)</li>
+    <li><strong>[ k ]</strong> - change to <strong>next</strong> image source (sequence mode)</li>
 </ul>
 
 <div class="description">
