--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -396,6 +396,16 @@
             <li>e.g. <a href="https://isg.nist.gov/deepzoomweb/view/image/moche">Material Science: Moche</a></li>
         </ul>
     </li>
+    <li>
+        <b>RationAI</b> visualization tool for high-resolution, multi-layered data by
+         <a href="https://www.fi.muni.cz/research/laboratories/rationai.html.en">RationAI research group at Masaryk University</a>:
+         explainable artifical intelligence research focused on cancer detection.
+        <ul>
+            <li>Video <a href="https://www.youtube.com/watch?v=AqV9Tj6heEI">5-MICC: Neural Networks and Cancer Detection in Tissue Scans</a></li>
+            <li><a href="https://rationai-vis.ics.muni.cz/visualization-demo/">Interactive showcase </a></li>
+        </ul>
+    </li>  
+    
      <li><a href="http://rosphoto.org/multispectral/index-en.html">ROSPHOTO Spectrozonal photography usage for attribution and analysis in archival photography</a></li>
      <li><a href="http://heatmaps.nimblex.net/">SDR Heatmaps (radio frequencies)</a>
          <ul>
