In The Wild (Noita)

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -466,6 +466,7 @@
     <li><a href="https://micr.io">Micrio</a> (<a href="https://micr.io/iiif/image-api">Demo</a>)</li>
     <li><a href="http://projectmirador.org">Mirador</a> (<a href="http://projectmirador.org/demo/">demo</a> - <a href="https://github.com/IIIF/mirador">GitHub</a>)</li>
     <li><a href="http://mosaically.com/">Mosaically</a></li>
+    <li><a href="https://github.com/whalehub/noita-map-viewer">Noita Map Viewer</a> (<a href="https://noita.datahoarder.dev">Demo</a>)</li>
     <li><a href="http://openslide.org/">OpenSlide</a> (<a href="http://openslide.org/demo/">demo</a>)</li>
 <!--    <li><a href="https://photosynth.net/preview/">Photosynth 3rd Generation</a></li> link does not resolve-->
     <li><a href="https://github.com/LibraryOfCongress/wdl-viewer">WDL Viewer</a></li>
