--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -61,13 +61,14 @@
     <div style="display:flex; justify-content: center; align-items: flex-start;">
     <ul style="">
         <li><a href="#art">Art/Photograpy</a></li>
+        <li><a href="#gaming">Gaming</a></li>
         <li><a href="#history">History</a></li>
+        <li><a href="#industrial">Industrial/Professional</a><li>
         <li><a href="#mapping">Mapping</a></li>
-        <li><a href="#science">Scientific</a></li>
     </ul>
     <ul>
+        <li><a href="#science">Scientific</a></li>
         <li><a href="#storytelling">Storytelling/Media</a></li>
-        <li><a href="#industrial">Industrial/Professional</a><li>
         <li><a href="#tools">Tools</a></li>
         <li><a href="#installations">Installations</a></li>
     </ul>
@@ -176,6 +177,14 @@
         <a href="https://www.webwallwhispers.net/">Fondazione Spinola-Banna: Web Wall Whispers</a>
     </li>
 </ul>
+
+<h4><a name="gaming"></a>Gaming</h4>
+<ul class="square-list">
+    <li>Dungeons and Dragons Forgotten Realms Map, <a href="https://dndcombat.com/faerun">Faerun</a></li>
+    <li><a href="http://embers.nicejacket.cc/known-eilarun.html">The Embers of Eilar&ucirc;n</a></li>
+    <li><a href="http://map.projectzomboid.com/">Project Zomboid Map Project</a></li>
+</ul>
+
 <h4><a name="history"></a>History</h4>
 <ul class="square-list">
     <li><a href="http://arkyves.org/view/essay0014/">Arkyves</a></li>
@@ -303,16 +312,31 @@
         </ul>
     </li>
 </ul>
+
+<h4><a name="industrial"></a>Industrial/Professional</h4>
+<ul class="square-list">
+  <li><a href="http://200k.accaglobal.com/wall">ACCA's "Wall of Members"</a></li>
+  <li><a href="https://clarksullivan.com/cams/ritz">Clark/Sullivan Construction</a></li>
+  <li><a href="http://www.sitecenters.com/">SITE Centers Corp.</a>
+    <ul>
+      <li>e.g. <a href="https://www.sitecenters.com/properties/leaseplan/winter-garden-village">Winter Garden Village</a></li>
+    </ul>
+  </li>
+  <li><a href="https://www.truedesign.it/en/lifespaces">True Design Life Spaces</a>
+    <ul>
+      <li>e.g. <a href="https://www.truedesign.it/en/lifespaces/working_space-13.html">Working Spaces</a></li>
+    </ul>
+  </li>
+</ul>
+
 <h4><a name="mapping"></a>Mapping</h4>
 <ul class="square-list">
-    <li><a href="http://embers.nicejacket.cc/known-eilarun.html">The Embers of Eilar&ucirc;n</a></li>
     <li><a href="https://lib.msu.edu/branches/map/scannedmaps/intro/">Michigan State University Map Library</a>
         <ul>
             <li>e.g. <a href="https://lib.msu.edu/branches/map/MiJPEGS/1822-michigan/">Michigan Territory, 1822</a></li>
         </ul>
     </li>
     <li><a href="http://www.idansoft.com/OblivisionJS/menu.aspx">Oblivision</a></li>
-    <li><a href="http://map.projectzomboid.com/">Project Zomboid Map Project</a></li>
     <li>
         <a href="https://www.romaierioggi.it/category/mappe/">Roma Ieri Oggi</a>
         <ul>
@@ -441,22 +465,7 @@
     <li><a href="http://twittercensus.se/graph2014/graphwalk14.php">Swedish Twitter Census, 2014</a></li>
 <!--    <li><a href="http://www.vam.ac.uk/content/articles/i/exhibition-road-drawing-scroll/">Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://www.vam.ac.uk/blog/digital-media/building-the-deepzoom">more info</a>)</li>  tilesource doesn't load -->
     <li><a href="http://rosphoto.org/interactive-museum/dmitrii-donskoi/app/ship/index-en.html">The Voyage on the Cruiser Dmitrii Donskoi, ROSPHOTO</a> (<a href="http://rosphoto.org/collection-en/virtual-museum/the-voyage-on-the-cruiser-dmitrii-donskoi/">more info</a>)</li>
-    <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li>
-</ul>
-<h4><a name="industrial"></a>Industrial/Professional</h4>
-<ul class="square-list">
-  <li><a href="http://200k.accaglobal.com/wall">ACCA's "Wall of Members"</a></li>
-  <li><a href="https://clarksullivan.com/cams/ritz">Clark/Sullivan Construction</a></li>
-  <li><a href="http://www.sitecenters.com/">SITE Centers Corp.</a>
-    <ul>
-      <li>e.g. <a href="https://www.sitecenters.com/properties/leaseplan/winter-garden-village">Winter Garden Village</a></li>
-    </ul>
-  </li>
-  <li><a href="https://www.truedesign.it/en/lifespaces">True Design Life Spaces</a>
-    <ul>
-      <li>e.g. <a href="https://www.truedesign.it/en/lifespaces/working_space-13.html">Working Spaces</a></li>
-    </ul>
-  </li>
+<!-- offline:    <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li> -->
 </ul>
 
 <h4><a name="tools"></a>Tools</h4>
@@ -466,13 +475,13 @@
     <li><a href="https://micr.io">Micrio</a> (<a href="https://micr.io/iiif/image-api">Demo</a>)</li>
     <li><a href="http://projectmirador.org">Mirador</a> (<a href="http://projectmirador.org/demo/">demo</a> - <a href="https://github.com/IIIF/mirador">GitHub</a>)</li>
     <li><a href="http://mosaically.com/">Mosaically</a></li>
-    <li><a href="https://github.com/whalehub/noita-map-viewer">Noita Map Viewer</a> (<a href="https://noita.datahoarder.dev">Demo</a>)</li>
     <li><a href="http://openslide.org/">OpenSlide</a> (<a href="http://openslide.org/demo/">demo</a>)</li>
 <!--    <li><a href="https://photosynth.net/preview/">Photosynth 3rd Generation</a></li> link does not resolve-->
     <li><a href="https://github.com/LibraryOfCongress/wdl-viewer">WDL Viewer</a></li>
     <li><a href="http://player.digirati.co.uk/">Wellcome Player</a></li>
     <li><a href="http://zoomable.ca/">Zoomable</a></li>
 </ul>
+
 <h4><a name="installations"></a>Installations</h4>
 <ul class="square-list">
     <li>Jewel City Exhibition, 2015, <a href="http://deyoung.famsf.org/">de Young Museum</a></li>
