--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -233,6 +233,11 @@
         <td>Free proprietary export plugin for Photoshop</td>
         <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
     </tr>
+    <tr>
+        <td><a href="https://github.com/GoogleCloudPlatform/dataflow-zoomify-image/">Dataflow-zoomify-image</a></td>
+        <td>Free Google Cloud Dataflow template allowing large amounts of images to be processed in parallel</td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
+    </tr>
 </table>
 <br/>
 <p>If none of these options meet your needs, you can create your own tile-generating tool. See <a href="https://github.com/openseadragon/openseadragon/wiki/The-DZI-File-Format">this page</a> for more information on the DZI format.</p>
