--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             <li><a href="https://github.com/Pin0/openseadragon-justified-collection">OpenSeadragonJustifiedCollection</a> Openseadragon plugin for arranging collections in a justified grid layout.</li>
             <li><a href="https://github.com/picturae/OpenSeadragonMagnifier">OpenSeadragonMagnifier</a> allows you to view part of the image magnified in a navigator-like box.</li>
             <li><a href="https://github.com/MartinPluta/OpenSeadragonMultiRow">OpenSeadragonMultiRow</a> adds navigation and options for multi row image sequences.</li>
+            <li><a href="https://github.com/WasMachenSachen/openseadragon-opacity-slider">OpenSeadragon Opacity Slider</a> adds the functionality to adjust the transparency in the GUI, as well as to adjust their order. This can be useful for comparing different maps of the same place, satellite-imagery with different recording dates, images of art captured with different techniques.</li>
             <li><a href="https://github.com/eriksjolund/OpenSeadragonPaperjsOverlay">OpenSeadragonPaperjsOverlay</a> allows you to add Paper.js canvas overlay that pans and zooms with OpenSeadragon viewer.</li>
             <li><a href="https://github.com/picturae/openseadragonrgb">OpenSeadragonRGB</a> allows reading the rgb values of image pixels.</li>
             <li><a href="https://github.com/usnistgov/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
